--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mostrador de JSON</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="bracket-curly.png">
+    <link rel="stylesheet" href="/src/style.css">
+    <link rel="icon" type="image/png" href="/src/imgs/bracket-curly.png">
 </head>
 <body>
     <header>
